--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 
 body {
 background-color: #eeeeee;
-font-family: Helvetica, Sans-Serif;
+font-family: Verdana, Sans-Serif;
 color: #000000;
 font-size: 1.5em;
 
