--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 
 body {
-background-color: #eeeeee;
+background-color: #444444;
 font-family: Verdana, Sans-Serif;
-color: #000000;
+color: #dddddd;
 font-size: 1.5em;
 
 margin-right: 20vw;
@@ -41,13 +41,13 @@ color: black;
 
 /* Add a color to the active/current link */
 .topnav a.active {
-background-color: #000000;
+background-color: #222222;
 color: white;
 }
 
 a {
 text-decoration: none;
-color: black;
+color: white;
 font-style: italic;
 font-weight: bold;
 }
