--- a/style.css
+++ b/style.css
@@ -1,12 +1,12 @@
 
 body {
 background-color: #444444;
-font-family: Verdana, Sans-Serif;
+font-family: Verdana, sans-serif;
 color: #dddddd;
 font-size: 1.5em;
 
-margin-right: 20vw;
-margin-left: 20vw;
+margin-right: 15vw;
+margin-left: 15vw;
 margin-top: 5vh;
 margin-bottom: 10vh;
 }
