--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 
 body {
-background-color: #444444;
-font-family: Verdana, sans-serif;
-color: #dddddd;
+background-color: #D9D9D9;
+font-family: "Times New Roman", Times, serif;
+color: #000000;
 font-size: 1.5em;
 
 margin-right: 15vw;
@@ -35,19 +35,19 @@ padding: 5px 5px;
 
 /* Change the color of links on hover */
 .topnav a:hover {
-background-color: #4E93FB;
+background-color: #D9D9D9;
 color: black;
 }
 
 /* Add a color to the active/current link */
 .topnav a.active {
-background-color: #222222;
+background-color: #D9D9D9;
 color: #dddddd;
 }
 
 a {
 text-decoration: none;
-color: #dddddd;
+color: #000000;
 font-style: italic;
 font-weight: bold;
 }
