--- a/styles.css
+++ b/styles.css
@@ -26,6 +26,30 @@ font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Noto Sans', Helveti
     border-radius: 4px;
 }
 
+.date {
+  color: #666;
+  font-family: monospace;
+}
+
+#title-block-header {
+  margin-bottom: 2rem;
+}
+
+#title-block-header .title {
+  margin-bottom: 0.25rem;
+}
+
+#title-block-header .author {
+  color: #666;
+  margin: 0.25rem 0;
+}
+
+#title-block-header .date {
+font-size: 1.3 em;
+  color: #666;
+  font-family: monospace;
+}
+
 h1 {
     font-size: 2.5rem;
     margin-bottom: 0.0rem;
@@ -37,7 +61,18 @@ h2 {
     font-size: 1.5rem;
     margin-top: 0.0rem;
     font-weight: normal;
+    border-bottom: 2px solid #000;
+    padding-bottom: 0.3rem;
 }
+
+h3 {
+    font-size: 1.3rem;
+    margin-top: 0.0rem;
+    font-weight: normal;
+    border-bottom: 1px solid #aaa;
+    padding-bottom: 0.3rem;
+}
+
 
 .contact-links {
     margin-top: 1rem;
