--- a/styles.css
+++ b/styles.css
@@ -244,7 +244,7 @@ a:hover {
 
 @media (max-width: 600px) {
     .header {
-        flex-direction: column-reverse;
+        flex-direction: column;
         align-items: center;
     }
 
